Sun May 06 22:27:31 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: support xinerama in background scaling and scale
	  imageonto each screen rather then onto the entire screen

Sun May 06 16:31:07 2001  George Lebl <jirka@5z.com>

	* config/Failsafe*, config/Makefile.am, configure.in, gui/gdmlogin.c,
	  daemon/gdm.h: Use our built in Failsafe thingies since they're more
	  safe from hosage.  Also benicerin translating them and add some
	  tooltippage.

	* config/Xsession, config/Gnome.in:  Load in the xresources and
	  modmap and such magic.  Make it work on both rh6 and rh7 and
	  hopefully others.

	* daemon/slave.c:  Add more errors and pass some nice parameters
	  to the failsafe thingies.

Sun May 06 05:36:08 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: use the "Default" script if found as default

	* config/Gnome.in:  Read in ~/.Xresources, we need more magic
	  in this script however.

Fri May 04 18:10:08 2001  George Lebl <jirka@5z.com>

	* Release 2.2.1

Thu May 03 18:28:04 2001  George Lebl <jirka@5z.com>

	* gui/Makefile.am, gui/gdmchooser.c, gui/gdmlogin.c, gui/gdmconfig.c,
	  gui/misc.[ch]:  Add a misc functions file and add
	  strcasecmp_no_locale and use it.  Without this we fail in all kinds
	  of wird locale (like iso -9)

Thu May 03 17:13:23 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.c, gui/gdmchooser.c:  Use DOING_GDM_DEVELOPMENT env
	  var (scrap the old GDMCONFIG one for gdmconfig) and add actual
	  useful messages when glade stuff fails (as it does in ximian
	  packages now, but that makes a nice core file in those which sucks)

Thu May 03 13:22:52 2001  George Lebl <jirka@5z.com>

	* gui/Makefile.am, gui/gdmconfig.desktop(.in), po/POTFILES.in,
	  po/*.po, configure.in, Makefile.am:  Add the usage of
	  xml-i18n-tools for the desktop file

Wed May 02 18:08:17 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.glade: fix limits on the spinbuttons

	* gui/gdmconfig.c: Fix default linking, provide uniqueness checking