@@ -1,3 +1,8 @@
+Mon May 07 17:12:29 2001  George Lebl <jirka@5z.com>
+
+	* gui/icon-entry-hack.c: update from gnome-core to fix selection
+	  dialog issues
+
 Sun May 06 22:27:31 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmlogin.c: support xinerama in background scaling and scale
